Source/WebCore/page/FrameView.cpp
@@ -1147,10 +1147,17 @@ int FrameView::scrollXForFixedPosition() const
 
     int x = scrollX();
 
-    if (x < 0)
-        x = 0;
-    else if (x > maxX)
-        x = maxX;
+    if (!ScrollView::scrollOrigin().x()) {
+        if (x < 0)
+            x = 0;
+        else if (x > maxX)
+            x = maxX;
+    } else {
+        if (x > 0)
+            x = 0;
+        else if (x < -maxX)
+            x = -maxX;
+    }
 
     if (!m_frame)
         return x;
@@ -1175,10 +1182,17 @@ int FrameView::scrollYForFixedPosition() const
 
     int y = scrollY();
 
-    if (y < 0)
-        y = 0;
-    else if (y > maxY)
-        y = maxY;
+    if (!ScrollView::scrollOrigin().y()) {
+        if (y < 0)
+            y = 0;
+        else if (y > maxY)
+            y = maxY;
+    } else {
+        if (y > 0)
+            y = 0;
+        else if (y < -maxY)
+            y = -maxY;
+    }
 
     if (!m_frame)
         return y;
